--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "grunt qunit"
   },
   "devDependencies": {
-    "grunt": "~0.3.17"
+    "grunt": "~0.4.0",
+    "grunt-contrib-jshint": "0.1.1rc6",
+    "grunt-contrib-concat": "0.1.2rc6",
+    "grunt-contrib-uglify": "0.1.1rc6",
+    "grunt-contrib-qunit": "~0.1.1"
   }
 }
